--- a/backend/package.json
+++ b/backend/package.json
@@ -24,6 +24,7 @@
         "jsonwebtoken": "^9.0.0",
         "nodemon": "^2.0.22",
         "passport": "^0.6.0",
+        "passport-facebook": "^3.0.0",
         "passport-google-oauth20": "^2.0.0",
         "pg": "^8.11.0"
     },
@@ -37,6 +38,7 @@
         "@types/jsonwebtoken": "^9.0.2",
         "@types/node": "^20.3.1",
         "@types/passport": "^1.0.12",
+        "@types/passport-facebook": "^2.1.11",
         "@types/passport-google-oauth20": "^2.0.11",
         "@types/pg": "^8.10.2",
         "ts-node": "^10.9.1",
