backend: build feature upload file to cloudinary

--- a/backend/package.json
+++ b/backend/package.json
@@ -14,7 +14,9 @@
     "license": "ISC",
     "dependencies": {
         "bcrypt": "^5.1.0",
+        "buffer-to-stream": "^1.0.0",
         "class-validator": "^0.14.0",
+        "cloudinary": "^1.39.0",
         "cookie-parser": "^1.4.6",
         "cors": "^2.8.5",
         "dotenv": "^16.3.1",
@@ -22,6 +24,8 @@
         "express-session": "^1.17.3",
         "expressjs": "^1.0.1",
         "jsonwebtoken": "^9.0.0",
+        "multer": "^1.4.5-lts.1",
+        "multer-storage-cloudinary": "^4.0.0",
         "nodemon": "^2.0.22",
         "passport": "^0.6.0",
         "passport-facebook": "^3.0.0",
@@ -30,12 +34,14 @@
     },
     "devDependencies": {
         "@types/bcrypt": "^5.0.0",
+        "@types/buffer-to-stream": "^1.0.0",
         "@types/cookie-parser": "^1.4.3",
         "@types/cors": "^2.8.13",
         "@types/dotenv": "^8.2.0",
         "@types/express": "^4.17.17",
         "@types/express-session": "^1.17.7",
         "@types/jsonwebtoken": "^9.0.2",
+        "@types/multer": "^1.4.7",
         "@types/node": "^20.3.1",
         "@types/passport": "^1.0.12",
         "@types/passport-facebook": "^2.1.11",
