--- a/frontend/client/package.json
+++ b/frontend/client/package.json
@@ -1,43 +1,44 @@
 {
-  "name": "admin",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
-    "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
-  },
-  "dependencies": {
-    "@emotion/react": "^11.11.1",
-    "@mantine/carousel": "^6.0.16",
-    "@mantine/core": "^6.0.14",
-    "@mantine/ds": "^6.0.15",
-    "@mantine/form": "^6.0.16",
-    "@mantine/hooks": "^6.0.14",
-    "@mantine/notifications": "^6.0.16",
-    "@tabler/icons-react": "^2.23.0",
-    "axios": "^1.4.0",
-    "embla-carousel-react": "^8.0.0-rc11",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-responsive-carousel": "^3.2.23",
-    "react-router-dom": "^6.14.0"
-  },
-  "devDependencies": {
-    "@types/react": "^18.0.37",
-    "@types/react-dom": "^18.0.11",
-    "@typescript-eslint/eslint-plugin": "^5.59.0",
-    "@typescript-eslint/parser": "^5.59.0",
-    "@vitejs/plugin-react": "^4.0.0",
-    "autoprefixer": "^10.4.14",
-    "eslint": "^8.38.0",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.3.4",
-    "postcss": "^8.4.24",
-    "tailwindcss": "^3.3.2",
-    "typescript": "^5.0.2",
-    "vite": "^4.3.9"
-  }
+    "name": "admin",
+    "private": true,
+    "version": "0.0.0",
+    "type": "module",
+    "scripts": {
+        "dev": "vite",
+        "build": "tsc && vite build",
+        "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+        "preview": "vite preview"
+    },
+    "dependencies": {
+        "@emotion/react": "^11.11.1",
+        "@mantine/carousel": "^6.0.16",
+        "@mantine/core": "^6.0.14",
+        "@mantine/ds": "^6.0.15",
+        "@mantine/form": "^6.0.16",
+        "@mantine/hooks": "^6.0.14",
+        "@mantine/notifications": "^6.0.16",
+        "@react-oauth/google": "^0.11.1",
+        "@tabler/icons-react": "^2.23.0",
+        "axios": "^1.4.0",
+        "embla-carousel-react": "^8.0.0-rc11",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
+        "react-responsive-carousel": "^3.2.23",
+        "react-router-dom": "^6.14.0"
+    },
+    "devDependencies": {
+        "@types/react": "^18.0.37",
+        "@types/react-dom": "^18.0.11",
+        "@typescript-eslint/eslint-plugin": "^5.59.0",
+        "@typescript-eslint/parser": "^5.59.0",
+        "@vitejs/plugin-react": "^4.0.0",
+        "autoprefixer": "^10.4.14",
+        "eslint": "^8.38.0",
+        "eslint-plugin-react-hooks": "^4.6.0",
+        "eslint-plugin-react-refresh": "^0.3.4",
+        "postcss": "^8.4.24",
+        "tailwindcss": "^3.3.2",
+        "typescript": "^5.0.2",
+        "vite": "^4.3.9"
+    }
 }
