--- a/backend/package.json
+++ b/backend/package.json
@@ -23,14 +23,17 @@
         "express": "^4.18.2",
         "express-session": "^1.17.3",
         "expressjs": "^1.0.1",
+        "jade": "^1.11.0",
         "jsonwebtoken": "^9.0.0",
+        "moment": "^2.29.4",
         "multer": "^1.4.5-lts.1",
         "multer-storage-cloudinary": "^4.0.0",
         "nodemon": "^2.0.22",
         "passport": "^0.6.0",
         "passport-facebook": "^3.0.0",
         "passport-google-oauth20": "^2.0.0",
-        "pg": "^8.11.0"
+        "pg": "^8.11.0",
+        "qs": "^6.11.2"
     },
     "devDependencies": {
         "@types/bcrypt": "^5.0.0",
