--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "@types/jade": "^0.0.32",
         "bcrypt": "^5.1.0",
         "buffer-to-stream": "^1.0.0",
         "class-validator": "^0.14.0",
@@ -28,6 +29,7 @@
         "moment": "^2.29.4",
         "multer": "^1.4.5-lts.1",
         "multer-storage-cloudinary": "^4.0.0",
+        "nodemailer": "^6.9.5",
         "nodemon": "^2.0.22",
         "passport": "^0.6.0",
         "passport-facebook": "^3.0.0",
@@ -46,6 +48,7 @@
         "@types/jsonwebtoken": "^9.0.2",
         "@types/multer": "^1.4.7",
         "@types/node": "^20.3.1",
+        "@types/nodemailer": "^6.4.10",
         "@types/passport": "^1.0.12",
         "@types/passport-facebook": "^2.1.11",
         "@types/passport-google-oauth20": "^2.0.11",
