--- a/frontend/admin/package.json
+++ b/frontend/admin/package.json
@@ -18,11 +18,14 @@
         "@mantine/notifications": "^6.0.16",
         "@tabler/icons-react": "^2.23.0",
         "axios": "^1.4.0",
+        "file-saver": "^2.0.5",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
-        "react-router-dom": "^6.14.0"
+        "react-router-dom": "^6.14.0",
+        "xlsx": "^0.18.5"
     },
     "devDependencies": {
+        "@types/file-saver": "^2.0.5",
         "@types/react": "^18.0.37",
         "@types/react-dom": "^18.0.11",
         "@typescript-eslint/eslint-plugin": "^5.59.0",
