--- a/frontend/client/package.json
+++ b/frontend/client/package.json
@@ -13,6 +13,7 @@
         "@emotion/react": "^11.11.1",
         "@mantine/carousel": "^6.0.16",
         "@mantine/core": "^6.0.14",
+        "@mantine/dates": "^6.0.21",
         "@mantine/ds": "^6.0.15",
         "@mantine/form": "^6.0.16",
         "@mantine/hooks": "^6.0.14",
