--- a/frontend/client/package.json
+++ b/frontend/client/package.json
@@ -21,6 +21,7 @@
         "@react-oauth/google": "^0.11.1",
         "@tabler/icons-react": "^2.23.0",
         "axios": "^1.4.0",
+        "dayjs": "^1.11.10",
         "embla-carousel-react": "^8.0.0-rc11",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
