--- a/frontend/client/package.json
+++ b/frontend/client/package.json
@@ -22,6 +22,7 @@
         "@tabler/icons-react": "^2.23.0",
         "axios": "^1.4.0",
         "dayjs": "^1.11.10",
+        "dotenv": "^16.3.1",
         "embla-carousel-react": "^8.0.0-rc11",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
@@ -29,6 +30,7 @@
         "react-router-dom": "^6.14.0"
     },
     "devDependencies": {
+        "@types/node": "^20.7.0",
         "@types/react": "^18.0.37",
         "@types/react-dom": "^18.0.11",
         "@typescript-eslint/eslint-plugin": "^5.59.0",
