--- a/frontend/client/package.json
+++ b/frontend/client/package.json
@@ -5,7 +5,7 @@
     "type": "module",
     "scripts": {
         "dev": "vite --host --port 5173",
-        "build": "tsc --noEmit && vite build",
+        "build": "vite build",
         "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
         "preview": "vite preview"
     },
