--- a/backend/package.json
+++ b/backend/package.json
@@ -53,7 +53,14 @@
         "@types/passport-facebook": "^2.1.11",
         "@types/passport-google-oauth20": "^2.0.11",
         "@types/pg": "^8.10.2",
+        "pre-commit": "^1.2.2",
+        "rimraf": "^5.0.5",
         "ts-node": "^10.9.1",
         "typescript": "^5.1.3"
-    }
+    },
+    "pre-commit": [
+        "ts.check",
+        "build",
+        "add-build"
+    ]
 }
