--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,8 @@
     "main": "index.js",
     "scripts": {
         "build": "rimraf ./build && tsc",
-        "start": "npm run build && node build/index.js",
+        "start": "vercel dev",
+        "depploy": "vercel deploy --prod",
         "start:dev": "npx nodemon",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
