--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,7 @@
         "class-validator": "^0.14.0",
         "cloudinary": "^1.39.0",
         "cookie-parser": "^1.4.6",
+        "cookie-session": "^2.0.0",
         "cors": "^2.8.5",
         "dotenv": "^16.3.1",
         "express": "^4.18.2",
@@ -41,6 +42,7 @@
         "@types/bcrypt": "^5.0.0",
         "@types/buffer-to-stream": "^1.0.0",
         "@types/cookie-parser": "^1.4.3",
+        "@types/cookie-session": "^2.0.45",
         "@types/cors": "^2.8.13",
         "@types/dotenv": "^8.2.0",
         "@types/express": "^4.17.17",
