--- a/frontend/client/package.json
+++ b/frontend/client/package.json
@@ -23,6 +23,7 @@
         "axios": "^1.4.0",
         "dayjs": "^1.11.10",
         "dotenv": "^16.3.1",
+        "embla-carousel-autoplay": "^8.0.0-rc14",
         "embla-carousel-react": "^8.0.0-rc11",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
