build dashboard in admin page

--- a/frontend/admin/package.json
+++ b/frontend/admin/package.json
@@ -18,8 +18,10 @@
         "@mantine/notifications": "^6.0.16",
         "@tabler/icons-react": "^2.23.0",
         "axios": "^1.4.0",
+        "chart.js": "^4.4.0",
         "file-saver": "^2.0.5",
         "react": "^18.2.0",
+        "react-chartjs-2": "^5.2.0",
         "react-dom": "^18.2.0",
         "react-router-dom": "^6.14.0",
         "xlsx": "^0.18.5"
